--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -91,6 +91,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                 <li>
                                                     <a href="/login">Login</a>
                                                 </li>
+                                                <li>
+                                                    <li><a href="/registrarse">Registrarse</a></li>
+                                                </li>
 
                                             </ul>
                                         </li>
