--- a/views/login.hbs
+++ b/views/login.hbs
@@ -87,6 +87,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button " aria-haspopup="true" aria-expanded="false">Iniciar Sesión <span class="caret"></span></a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="/login">Login</a></li>
+                                                <li><a href="/registrarse">Registrarse</a></li>
 
                                             </ul>
                                         </li>
