--- a/views/vista_report.hbs
+++ b/views/vista_report.hbs
@@ -111,24 +111,71 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <p class="w3ls-p">REPORTES DE LA CONCESIONARIA LATINOAMERICANA: </p>
           <!--Inicio tabla-->
             <div class="container my-5 text-center">
-                <button type="button" class="btn btn-outline-warning" onclick="traer()">Obtener</button>
+
+                <!-- filtros -->
+                <div class="my-3">
+                    Marcas
+                <select id="marcas" name="marcas">
+                    <option value="" selected >Seleccionar marca</option>
+                </select>
                     
+                    &nbsp;
+                    Modelos
+                <select id="modelos" name="modelos">
+                    <option value="" selected >Seleccionar modelo</option>
+                </select>
+
+                    &nbsp;
+                    Tipos de vehículos
+                <select id="tiposVehiculos" name="tiposVehiculos">
+                    <option value="" selected >Seleccionar tipo de vehículo</option>
+                </select>
+
+                    &nbsp;
+                    Tipos de combustibles
+                <select id="tiposCombustibles" name="tiposCombustibles">
+                    <option value="" selected >Seleccionar tipo de combustible</option>
+                </select>
+                
+
+                &nbsp;
+                    Precios
+                <select id="precios" name="precio">
+                    <option value="" selected >Seleccionar precio</option>
+                </select>
+               </div>
+
+               &nbsp;
+                Tipos de ofertas
+               <select id="tiposOfertas" name="tiposOfertas">
+                  <option value="" selected >Seleccionar tipo de oferta</option>
+               </select>
+               </div>
+
+
+                <button type="button" class="btn btn-outline-warning" onclick="filtrarCarros()">Filtrar</button>
+
+                <!-- grafica -->
+                <figure class="highcharts-figure">
+                    <div id="container" style="display: none;"></div>
+                </figure>
+                    
+                    <!-- tabla -->
                     <div class="mt-5" id="tabla_principal">
-                        <table class="table">
+                        <table id="carros" name="carros" class="table">
                             <thead>
                                <tr>
                                     <th> Id de carro  </th>
-                                    <th> Tipo de carro  </th>
+                                    <th> Marca  </th>
                                     <th> Modelo </th>
-                                    <th> Marca </th>
-                                    <th> Precio </th>
+                                    <th> Tipo de vehículo </th>
+                                    <th> Tipo de combustible </th>
+                                    <th> Kilometraje </th>
                                     <th> Caja de cambios </th>
-                                    <th> Mes de matriculacion </th>
-                                    <th> Año de matriculacion </th>
                                 </tr>
                             </thead>
                             <tbody id="contenido">
-
+                                <td colspan="7" class="text-center"> No se encontraron registros </td>
                             </tbody>
                         </table>
                     </div>
@@ -202,6 +249,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script type="text/javascript" src="js/move-top.js"></script>
     <script type="text/javascript" src="js/easing.js"></script>
     <script type="text/javascript" src="js/convertir.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+    <script type="text/javascript" src="js/highcharts.js"></script>
+    <script type="text/javascript" src="js/api.js"></script>
 
     <!-- here stars scrolling script -->
     <script type="text/javascript">
@@ -218,6 +271,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             $().UItoTop({
                 easingType: 'easeOutQuart'
             });
+
+             //Metodos de api.js
+            obtenerMarcas();
+            obtenerModelos();
+            obtenerTiposVehiculos();
+            obtenerTiposCombustibles();
+            obtenerPrecios();
+            obtenerTiposOfertas();
 
         });
         
@@ -237,7 +298,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         });
     </script>
     <!-- //scrolling script -->
+<script>
+    /SCRIPT PARA COONVERTIR TABLA A PDF/
+        
+    function func_pdf() {
+            var sTable = document.getElementById('tabla_principal').innerHTML;
 
+            var style = "<style>";
+            style = style + "table {width: 100%;font: 17px Calibri;}";
+            style = style + "table, th, td {border: solid 1px #DDD; border-collapse: collapse;";
+            style = style + "padding: 2px 3px;text-align: center;}";
+            style = style + "</style>";
+
+            // CREATE A WINDOW OBJECT.
+            var win = window.open('', '', 'height=700,width=700');
+
+            win.document.write('<html><head>');
+            win.document.write('<title>Profile</title>');   // <title> FOR PDF HEADER.
+            win.document.write(style);          // ADD STYLE INSIDE THE HEAD TAG.
+            win.document.write('</head>');
+            win.document.write('<body>');
+            win.document.write(sTable);         // THE TABLE CONTENTS INSIDE THE BODY TAG.
+            win.document.write('</body></html>');
+
+            win.document.close(); 	// CLOSE THE CURRENT WINDOW.
+
+            win.print();    // PRINT THE CONTENTS.
+        }
+
+
+    /FIN SCRIPT PARA COONVERTIR TABLA A PDF/
+</script>
 </body>
 
 </html>
