--- a/views/login.hbs
+++ b/views/login.hbs
@@ -108,6 +108,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="w3_wthree_agileits_icons main-grid-border">
         <div class="container">
             <h2 class="w3l-titles">Iniciar Sesión</h2>
+            <img src="images\Carros-de-Portada-Multipartes.png" alt="">
+            
             <p class="w3ls-p"></p>
             <!-- Content -->
             <div class="container">
@@ -117,18 +119,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <div class="display-5 fw-bold">
                         <form>
                             <div class="mb-3">
-                                <p> <label for="inputEmail" class="form-label - center">Usuario</label>
+                                <br>
+                                <p> <label for="inputEmail" class="form-label - center">USUARIO</label>
                                     <input type="email" class="form-control text-light" id="inputEmail" aria-describedby="emailHelp" style="background-color: transparent;">
                                 </p>
                             </div>
                             <div class="mb-3">
-                                <label for="inputPassword" class="form-label">Contraseña</label>
+                                <label for="inputPassword" class="form-label">CONTRASEÑA</label>
                                 <input type="password" class="form-control text-light" id="inputPassword" style="background-color:transparent;">
                             </div>
                             <p id="times"></p>
                         </form>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                            <a role="button" class="btn btbtn btn-outline-warning" onclick="logearse()" >Ingresar</a>
+                            <a role="button" class="btn btbtn btn-outline-warning" onclick="logearse()" >INGRESAR</a>
                         </div>
                     </div>
                     <b></b>
