--- a/views/vista_report.hbs
+++ b/views/vista_report.hbs
@@ -157,7 +157,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <!-- grafica -->
                 <figure class="highcharts-figure">
-                    <div id="container" style="display: none;"></div>
+                    <div id="container" style="display: flow-root;"></div>
                 </figure>
                     
                     <!-- tabla -->
