--- a/views/vista_report.hbs
+++ b/views/vista_report.hbs
@@ -108,48 +108,62 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="typo">
         <div class="container">
             <h3 class="w3l-titles">TABLAS | REPORTES</h3>
-            <p class="w3ls-p">REPORTES DE LA CONCESIONARIA LATINOAMERICANA: </p>
-          <!--Inicio tabla-->
+            <p class="w3ls-p">REPORTES DE LA CONCESIONARIA LATINOAMERICANA: </p> </br>
+         <!--Inicio tabla-->
             <div class="container my-5 text-center">
-
+                
                 <!-- filtros -->
-                <div class="my-3">
+                <div class="my-3 col-md-6 text-left">
+                <dl>
+                <dd text_align="left">
+                    &nbsp;
                     Marcas
-                <select id="marcas" name="marcas">
-                    <option value="" selected >Seleccionar marca</option>
+                <select id="marcas" name="marcas" text_align="right">
+                    <option value="" selected >Seleccionar marca</option> </br>
                 </select>
-                    
+                </dd>
+                <dd>
                     &nbsp;
                     Modelos
                 <select id="modelos" name="modelos">
                     <option value="" selected >Seleccionar modelo</option>
                 </select>
-
+                </dd>
+                <dd>
                     &nbsp;
                     Tipos de vehículos
                 <select id="tiposVehiculos" name="tiposVehiculos">
                     <option value="" selected >Seleccionar tipo de vehículo</option>
                 </select>
+                </dd>
+                </dl>
+                </div>
 
+                <div class="my-3 col-md-6 text-left">
+                <dl>
+                <dd>
                     &nbsp;
                     Tipos de combustibles
                 <select id="tiposCombustibles" name="tiposCombustibles">
                     <option value="" selected >Seleccionar tipo de combustible</option>
                 </select>
-                
-
+                </dd>
+                <dd>
                 &nbsp;
                     Precios
                 <select id="precios" name="precio">
                     <option value="" selected >Seleccionar precio</option>
                 </select>
-               </div>
-
+               
+               </dd>
+                <dd>
                &nbsp;
                 Tipos de ofertas
                <select id="tiposOfertas" name="tiposOfertas">
                   <option value="" selected >Seleccionar tipo de oferta</option>
                </select>
+               </dd>
+               </div>
                </div>
 
 
