filtrar_arreglo_prev

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -145,7 +145,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             </div>
                             <div id="success"></div>
                             <!-- For success/fail messages -->
-                            <button type="submit" class="btn btn-primary">Enviar</button>
+                            <button type="button" class="btn btn-primary" onclick="enviarDatos()">Enviar</button>
                         </form>
                     </div>
                 </div>
@@ -249,6 +249,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             $().UItoTop({
                 easingType: 'easeOutQuart'
             });
+            
 
         });
     </script>
