--- a/views/vista_report.hbs
+++ b/views/vista_report.hbs
@@ -147,21 +147,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <option value="" selected >Seleccionar tipo de combustible</option>
                 </select>
                 </dd>
-                <dd>
-                &nbsp;
-                    Precios
-                <select id="precios" name="precio">
-                    <option value="" selected >Seleccionar precio</option>
-                </select>
-               
-               </dd>
-                <dd>
-               &nbsp;
-                Tipos de ofertas
-               <select id="tiposOfertas" name="tiposOfertas">
-                  <option value="" selected >Seleccionar tipo de oferta</option>
-               </select>
-               </dd>
+                
                </div>
                </div>
 
@@ -280,8 +266,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             obtenerModelos();
             obtenerTiposVehiculos();
             obtenerTiposCombustibles();
-            obtenerPrecios();
-            obtenerTiposOfertas();
+
 
         });
         
@@ -290,7 +275,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //here ends scrolling icon -->
 
     <!-- scrolling script -->
-    /*<script type="text/javascript">
+    <script type="text/javascript">
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event) {
                 event.preventDefault();
