--- a/views/login.hbs
+++ b/views/login.hbs
@@ -131,7 +131,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <p id="times"></p>
                         </form>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                            <a role="button" class="btn btbtn btn-outline-warning" onclick="logearse()" >INGRESAR</a>
+                            <a role="button" class="btn btbtn btn-outline-warning" onclick="loginUser()" >INGRESAR</a>
                         </div>
                     </div>
                     <b></b>
