--- a/views/registrarse.hbs
+++ b/views/registrarse.hbs
@@ -129,7 +129,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <p id="times"></p>
                         </form>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                            <a role="button" class="btn btbtn btn-outline-warning" onclick="logearse()" >REGISTRARSE</a>
+                            <a role="button" class="btn btbtn btn-outline-warning" onclick="registrar()" >REGISTRARSE</a>
                         </div>
                     </div>
                     <b></b>
@@ -233,12 +233,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             });
 
              //Metodos de api.js
-            obtenerMarcas();
-            obtenerModelos();
+            
+            /*obtenerModelos();
             obtenerTiposVehiculos();
             obtenerTiposCombustibles();
             obtenerPrecios();
-            obtenerTiposOfertas();
+            obtenerTiposOfertas();*/
 
         });
         
