--- a/views/administrador.hbs
+++ b/views/administrador.hbs
@@ -114,7 +114,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <thead>
                                <tr>
                                     <th> sk_carro  </th>
-                                    <th> sk_revicion  </th>
+                                    <th> sk_revision  </th>
                                     <th> sk_ventas  </th>
                                     <th> sk_concesionario </th>
                                     <th> sk_fecha </th>
